--- a/src/Payment.css
+++ b/src/Payment.css
@@ -9,3 +9,24 @@
     background-color: rgb(234, 237, 237);
     border-bottom: 1px solid lightgray;
 }
+
+.payment__container>h1 a {
+    text-decoration: none;
+}
+
+.payment__section {
+    display: flex;
+    padding: 20px;
+    margin: 0 20px;
+    border: 1px solid lightgray;
+}
+
+.payment__title {
+    flex: 0.2;
+}
+
+.payment__address,
+.payment__items,
+.payment__dettails {
+    flex: 0.8;
+}
